# sql_parser_experiment

./: .gitignore  pyproject.toml
examples/: example.py
query_parser/: __init__.py  cli.py  parser.py
tests/: test_parser.py
tests/queries/: query_1.sql  query_2.sql
