[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vertica_parser"
version = "0.1.0"
description = "A package for parsing Vertica queries and transforming subqueries into CTEs."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "sqlparse",
    "click",
    "requests"
]

[project.urls]
Homepage = "https://your.project.homepage"

[project.scripts]
vertica-parser = "vertica_parser.cli:cli"

[tool.setuptools.packages.find]
# In our project, the package code is in the 'vertica_parser' subdirectory.
where = ["."]
